// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component NavBar renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="gds-nav-bar-container noselect"
      >
        <div
          class="nav-bar-brand"
        >
          <a
            href="redirection"
          >
            <img
              alt="alt"
              src="logoSource"
            />
          </a>
        </div>
        <div
          class="nav-bar-items-container"
        >
          <div
            class="nav-bar-items-group"
          >
            <div
              class="nav-bar-menu-item"
            >
              <div
                class="nav-bar-menu-label"
              >
                button
              </div>
            </div>
          </div>
          <div
            class="nav-bar-items-group"
          >
            <div
              class="nav-bar-menu-item nav-bar-search-container"
            >
              <input
                autocomplete="false"
                class="nav-bar-search"
                placeholder="placeholder"
                type="text"
              />
            </div>
            <div>
              <div>
                ControlleMenu
                closed
                has no ref
              </div>
            </div>
            <div
              class="nav-bar-menu-item"
            >
              <i
                class="icon"
                icon="fal,icons"
              />
              <div
                class="nav-bar-menu-label"
              >
                button
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <nav
      class="gds-nav-bar-container noselect"
    >
      <div
        class="nav-bar-brand"
      >
        <a
          href="redirection"
        >
          <img
            alt="alt"
            src="logoSource"
          />
        </a>
      </div>
      <div
        class="nav-bar-items-container"
      >
        <div
          class="nav-bar-items-group"
        >
          <div
            class="nav-bar-menu-item"
          >
            <div
              class="nav-bar-menu-label"
            >
              button
            </div>
          </div>
        </div>
        <div
          class="nav-bar-items-group"
        >
          <div
            class="nav-bar-menu-item nav-bar-search-container"
          >
            <input
              autocomplete="false"
              class="nav-bar-search"
              placeholder="placeholder"
              type="text"
            />
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              has no ref
            </div>
          </div>
          <div
            class="nav-bar-menu-item"
          >
            <i
              class="icon"
              icon="fal,icons"
            />
            <div
              class="nav-bar-menu-label"
            >
              button
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NavBar Component NavBar renders without buttons or icons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="gds-nav-bar-container noselect"
      >
        <div
          class="nav-bar-brand"
        >
          <a
            href="redirection"
          >
            <img
              alt="alt"
              src="logoSource"
            />
          </a>
        </div>
        <div
          class="nav-bar-items-container"
        >
          <div
            class="nav-bar-items-group"
          />
          <div
            class="nav-bar-items-group"
          />
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="gds-nav-bar-container noselect"
    >
      <div
        class="nav-bar-brand"
      >
        <a
          href="redirection"
        >
          <img
            alt="alt"
            src="logoSource"
          />
        </a>
      </div>
      <div
        class="nav-bar-items-container"
      >
        <div
          class="nav-bar-items-group"
        />
        <div
          class="nav-bar-items-group"
        />
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
